--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>First paragraph</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt accusantium, nam praesentium esse voluptatibus aperiam nemo molestiae saepe quaerat maiores id neque, est at ipsa perspiciatis laboriosam reiciendis blanditiis ipsum?</p>
+	<p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu </p>
+	<p>Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel nunc</p>
+	<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
